Move files endpoints outside books scope and add better API docs
