# app/controllers/api/v1/books_controller.rb
@@ -5,5 +5,8 @@ class Api::V1::BooksController < Api::V1::BaseController
     @pagy, @books = search_or_list_books
   end
 
-  def show = @book = Book.where(hidden: false).find(params[:id])
+  def show
+    @book = Book.where(hidden: false).find(params[:id])
+    @files = @book.files if params[:expand]&.include?("files")
+  end
 end
