# app/controllers/api/v1/files_controller.rb
@@ -1,8 +1,5 @@
 class Api::V1::FilesController < Api::V1::BaseController
-  before_action :set_book
-  before_action :set_file, only: %i[ show ]
-
-  def index = @files = @book.files
+  before_action :set_file
 
   def show
     @pagy, @pages = list_file_pages if params[:expand]&.include?("pages")
@@ -10,7 +7,11 @@ class Api::V1::FilesController < Api::V1::BaseController
 
   private
 
-  def set_book = @book = Book.where(hidden: false).find(params[:book_id])
-  def set_file = @file = @book.files.find(params[:id])
+  def set_file
+    @file = BookFile.find(params[:id])
+
+    raise ActiveRecord::RecordNotFound if @file.book.hidden
+  end
+
   def list_file_pages = pagy(@file.pages.order(:number), limit: [ params[:limit].presence&.to_i || 20, 1000 ].min)
 end
